--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: "PREVAIL: a new eBPF verifier"
-email: prevail.ebpf.verifier@gmail.com
+email: "" # prevail.ebpf.verifier@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   PREVAIL is a new verifier for eBPF programs.
 baseurl: "" # the subpath of your site, e.g. /blog
